# n-body

./: .clang-format  .copilot-init.md  .editorconfig  .gitignore  .markdownlint.json  AGENTS.md  AGENTS.zh-CN.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  FINAL_CHECKLIST.md  QWEN.md  README.en.md  README.md  README.zh-CN.md  SECURITY.md  _config.yml  index.md  openspec.yaml
.claude/commands/opsx/: archive.md  explore.md
.claude/skills/openspec-archive-change/: SKILL.md
.claude/skills/openspec-explore/: SKILL.md
.githooks/: pre-commit
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  project-status.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  performance_issue.md  question.md
.github/workflows/: benchmark-smoke.yml  ci.yml  pages.yml
.kiro/specs/n-body-simulation/: design.md  requirements.md  tasks.md
benchmarks/: benchmark_main.cpp
changelog/: 2025-02-13_project-infrastructure.md  2026-03-09_major-refactoring.md  README.md
changelog/zh-CN/releases/: v1.0.0.md
docs/: ALGORITHMS.md  API.md  DIRECTORY_RESTRUCTURE_SUMMARY.md  PERFORMANCE.md  README.md
docs/architecture/: architecture.md  performance.md
docs/assets/: .gitkeep
docs/en/: api.md  architecture.md  index.md
docs/setup/: getting-started.md
docs/tutorials/: README.md
docs/zh-CN/: README.md  index.md
docs/zh-CN/architecture/: architecture.md  performance.md
docs/zh-CN/setup/: getting-started.md
docs/zh-CN/tutorials/: README.md
examples/: README.md  example_basic.cpp  example_custom_distribution.cpp  example_energy_conservation.cpp  example_force_methods.cpp
include/nbody/: app_cli.hpp  barnes_hut_tree.hpp  camera.hpp  cuda_gl_interop.hpp  error_handling.hpp  force_calculator.hpp  hdf5_io.hpp  integrator.hpp  particle_data.hpp  particle_system.hpp  performance_observability.hpp  renderer.hpp  serialization.hpp  simulation_state.hpp  spatial_hash_grid.hpp  types.hpp  ui_panel.hpp
openspec/changes/archive/0001-core-architecture/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-23-project-closeout-stabilization/: CLOSEOUT_NOTES.md  design.md
openspec/changes/evolve-nbody-platform/: design.md  proposal.md  tasks.md
openspec/changes/project-closeout-stabilization/: proposal.md  tasks.md
openspec/specs/: force-computation.md  force-computation.zh-CN.md  quality-attributes.md  quality-attributes.zh-CN.md  repository-governance.md  repository-governance.zh-CN.md  simulation-control.md  simulation-control.zh-CN.md  simulation-core.md  simulation-core.zh-CN.md  visualization.md  visualization.zh-CN.md
scripts/: README.md  benchmark.sh  build.sh  format.sh  setup-hooks.sh  test.sh
shaders/: particle.frag  particle.vert
site/: .gitignore  404.md  CONTRIBUTING.md  Gemfile  README.md  _config.yml  docs.md  index.md  package.json
site/.vitepress/: config.ts
site/.vitepress/theme/: style.css
site/_data/: translations.yml
site/_includes/: algorithms-zh.html  algorithms.html  benchmarks-zh.html  benchmarks.html  features-zh.html  features.html  footer.html  head.html  header.html  hero-zh.html  hero.html  lang-switch.html  scripts.html
site/_layouts/: default.html  docs-zh.html  docs.html  home-zh.html  home.html  page.html
site/_sass/: _base.scss  _components.scss  _docs.scss  _home.scss  _lang-switch.scss  _layout.scss  _variables.scss
site/assets/css/: just-the-docs-dark.scss  main.scss
site/assets/js/: i18n.js
site/changelog/: index.md
site/changelog-content/en/: index.md
site/changelog-content/en/releases/: v1.0.0.md  v2.0.0.md
site/changelog-content/zh-CN/: index.md
site/changelog-content/zh-CN/releases/: v2.0.0.md
site/changelog/releases/: v1.0.0.md  v2.0.0.md
site/docs/: algorithms.md  api.md  architecture.md  getting-started.md  index.md  performance.md
site/docs-content/: README.md
site/docs-content/architecture/: algorithms.md  api.md
site/docs-content/tutorials/: README.md
site/docs-content/zh-CN/: README.md
site/docs-content/zh-CN/architecture/: algorithms.md  architecture.md  performance.md
site/docs-content/zh-CN/tutorials/: README.md
site/en/: index.md
site/en/api-reference/: force-calculator.md  integrator.md  particle-system.md  renderer.md
site/en/benchmarks/: algorithm-comparison.md  methodology.md  performance.md
site/en/developer-guide/: architecture.md  contributing.md  cuda-kernels.md  memory-layout.md  references.md  testing.md
site/en/getting-started/: examples.md  installation.md  quick-start.md  testing.md
site/en/user-guide/: algorithms.md  configuration.md  distributions.md  serialization.md
site/zh-CN/: README.md  index.md
site/zh-CN/api-reference/: force-calculator.md  integrator.md  particle-system.md  renderer.md
site/zh-CN/architecture/: api.md
site/zh-CN/benchmarks/: algorithm-comparison.md  methodology.md  performance.md
site/zh-CN/developer-guide/: architecture.md  contributing.md  cuda-kernels.md  memory-layout.md  references.md  testing.md
site/zh-CN/docs/: algorithms.md  api.md  architecture.md  getting-started.md  index.md  performance.md
site/zh-CN/getting-started/: installation.md  quick-start.md
specs-archived/: README.md
specs-archived/product/: n-body-simulation.md
specs-archived/rfc/: 0001-core-architecture.md
src/: main.cpp
src/core/: app_cli.cpp  barnes_hut_tree.cpp  force_calculator.cpp  particle_system.cpp  spatial_hash_grid.cpp
src/cuda/: force_barnes_hut.cu  force_direct.cu  force_spatial_hash.cu  integrator.cu  particle_init.cu
src/render/: camera.cpp  cuda_gl_interop.cpp  renderer.cpp  ui_panel.cpp
src/utils/: error_handling.cpp  hdf5_io.cpp  performance_observability.cpp  serialization.cpp  simulation_state.cpp
tests/: test_app_cli.cpp  test_barnes_hut.cpp  test_camera.cpp  test_color_mapping.cpp  test_force_calculation.cpp  test_hdf5_io.cpp  test_integrator.cpp  test_particle_data.cpp  test_performance_observability.cpp  test_serialization.cpp  test_spatial_hash.cpp  test_ui_panel.cpp  test_validation.cpp
(+10 files in other folders)
